--- a/src/components/Resume/Contact.module.css
+++ b/src/components/Resume/Contact.module.css
@@ -1,12 +1,15 @@
 .header {
   margin: 0 0 -0.5rem 0;
   color: #0c0c0d;
+  font-family: Montserrat;
+  border: 1px solid red;
 }
 
 .contactContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* position: relative; */
 }
 
 .headerContact {
@@ -15,6 +18,7 @@
   align-items: center;
   margin: 0.5rem 0 0 0;
   text-align: center;
+  font-family: "Open Sans";
 }
 
 .profileButtons {
@@ -28,11 +32,3 @@
 .icon:hover {
   color: #0c0c0d;
 }
-
-/* icon: {
-      color: (isDarkMode) =>
-        isDarkMode ? "rgba(255,255,255,0.87)" : "rgba(0,0,0,0.6)",
-      "&:hover": {
-        color: (isDarkMode) => (isDarkMode ? "rgba(187,222,251,.7)" : "#121212"),
-      },
-    },  */
