--- a/src/components/Resume/ResumeSection.module.css
+++ b/src/components/Resume/ResumeSection.module.css
@@ -6,9 +6,9 @@
   margin-top: -0.5rem;
 }
 
-.darkDivider {
+/* .darkDivider {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .lightDivider {
   background-color: rgba(187, 222, 251, 0.2);
-}
+} */
