Add animation for theme transition on resume

--- a/src/components/Resume/ResumeContainer.module.css
+++ b/src/components/Resume/ResumeContainer.module.css
@@ -8,16 +8,45 @@
   margin-top: 6rem;
   width: 90%;
   position: relative; /* Allows theme switch to be positioned in upper-right corner */
-  transition: color 1s;
 }
 
+/* .root {
+  transition: all 1s;
+} */
+/* .root *:not(){
+   
+
+     transition: color 1s;
+    
+} */
+
 .paperLight {
-  background-color: white !important;
-  color: rgb(0, 27, 58) !important;
+  /* background-color: white !important;
+  color: rgb(0, 27, 58) !important; */
+  animation: to-light 0.5s forwards;
+}
+@keyframes to-light {
+  0% {
+    background-color: rgb(0, 27, 58);
+    color: rgba(255, 255, 255, 0.87);
+  }
+  100% {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 27, 58);
+  }
 }
 .paperDark {
-  background-color: rgb(0, 27, 58) !important;
-  color: rgba(255, 255, 255, 0.87) !important;
+  animation: to-dark 0.5s forwards;
+}
+@keyframes to-dark {
+  0% {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 27, 58);
+  }
+  100% {
+    background-color: rgb(0, 27, 58);
+    color: rgba(255, 255, 255, 0.87);
+  }
 }
 
 .paperLight a:visited,
