Finish basic resume redesign

--- a/src/components/Resume/Contact.module.css
+++ b/src/components/Resume/Contact.module.css
@@ -22,3 +22,14 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.icons {
+  display: flex;
+}
+
+.icon {
+  transition: transform 1s;
+}
+.icon:hover {
+  transform: rotate(360deg);
+}
