--- a/src/components/Resume/MainResume.module.css
+++ b/src/components/Resume/MainResume.module.css
@@ -1,7 +1,14 @@
 .sectionHeader {
-  margin: 3rem 0 -1rem 0;
   font-family: Montserrat;
   font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  /* border: 1px solid red; */
+  margin-top: 1rem;
+}
+
+.sectionHeader h3 {
+  margin: 0;
 }
 
 .container {
@@ -18,4 +25,10 @@
   position: absolute;
   right: 0;
   top: 0.5rem;
+}
+
+.sectionContent {
+  margin-top: 0.5rem;
+  width: calc(100% - 1.5rem);
+  align-self: flex-end;
 }
