Finish all font color changes for dark mode on Resume

--- a/src/components/Resume/Contact.module.css
+++ b/src/components/Resume/Contact.module.css
@@ -33,3 +33,10 @@
 .icon:hover {
   transform: rotate(360deg);
 }
+
+.iconBtn {
+  background-color: transparent !important;
+}
+.iconBtn:hover {
+  background-color: transparent !important;
+}
