--- a/src/components/Resume/ResumeContainer.module.css
+++ b/src/components/Resume/ResumeContainer.module.css
@@ -1,9 +1,25 @@
+/* THEME COLORS */ /* 
+    LIGHT
+      Background - #e1e1e1
+      Background (Paper) - #f7f7f7
+      Blue - #2196f3 (for theme switch)
+      Black (text-primary) - #222222
+      Dark Grey (text-secondary) - #3b3b3b
+
+    Dark
+      Background - #0c0c0d
+      Background (Paper) - #212121
+      Blue - #00b0ff / rgba(0, 176, 255, 1)
+      White (text-primary) - #f7f7f7
+      Light Grey (text-secondary) - #e1e1e1 OR #cfcfcf
+*/
+
 .resumeContainer {
   display: flex;
   justify-content: center;
 }
 
-.root {
+.paperRoot {
   padding: 1rem;
   margin-top: 6rem;
   width: 90%;
@@ -15,7 +31,6 @@
 .paperLight {
   animation: to-light-bg 0.5s forwards;
 }
-
 .paperDark {
   animation: to-dark-bg 0.5s forwards;
 }
@@ -28,52 +43,76 @@
 }
 
 .paperLight svg {
-  animation: to-light-text 0.5s forwards;
+  animation: to-light-svg 0.5s forwards;
 }
 .paperDark svg {
-  animation: to-dark-text 0.5s forwards;
+  animation: to-dark-svg 0.5s forwards;
+}
+
+.paperLight hr {
+  background-color: #222222;
+  margin-bottom: 1rem;
+  width: calc(100% + 3.5rem);
+  position: relative;
+  right: 2.5rem;
+}
+.paperDark hr {
+  background-color: #e1e1e1;
+  margin-bottom: 1rem;
+  width: calc(100% + 3.5rem);
+  position: relative;
+  right: 2.5rem;
+}
+
+@keyframes to-light-bg {
+  0% {
+    background-color: #212121;
+    color: rgba(255, 255, 255, 0.87);
+  }
+  100% {
+    background-color: #f7f7f7;
+    color: #000;
+  }
+}
+@keyframes to-dark-bg {
+  0% {
+    background-color: rgb(255, 255, 255);
+    color: #000;
+  }
+  100% {
+    background-color: #212121;
+    color: rgba(255, 255, 255, 0.87);
+  }
 }
 @keyframes to-light-text {
   0% {
     color: rgba(255, 255, 255, 0.87);
   }
   100% {
-    color: rgb(0, 27, 58);
+    color: #222222;
   }
 }
 @keyframes to-dark-text {
   0% {
-    color: rgb(0, 27, 58);
+    color: #222;
   }
   100% {
     color: rgba(255, 255, 255, 0.87);
   }
 }
-
-.paperLight hr {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-.paperDark hr {
-  background-color: rgba(187, 222, 251, 0.2);
-}
-
-@keyframes to-light-bg {
+@keyframes to-light-svg {
   0% {
-    background-color: rgb(0, 27, 58);
     color: rgba(255, 255, 255, 0.87);
   }
   100% {
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 27, 58);
+    color: #222;
   }
 }
-@keyframes to-dark-bg {
+@keyframes to-dark-svg {
   0% {
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 27, 58);
+    color: #222;
   }
   100% {
-    background-color: rgb(0, 27, 58);
     color: rgba(255, 255, 255, 0.87);
   }
 }
