Add animation for skill on hover

--- a/src/components/Resume/ResumeContainer.module.css
+++ b/src/components/Resume/ResumeContainer.module.css
@@ -80,7 +80,7 @@
     color: #000;
   }
   100% {
-    background-color: #212121;
+    background-color: #1e1e1e;
     color: rgba(255, 255, 255, 0.87);
   }
 }
