--- a/src/components/Resume/MainResume.module.css
+++ b/src/components/Resume/MainResume.module.css
@@ -1,3 +1,9 @@
+.container {
+  position: relative;
+  padding: 1rem;
+  background-color: #121212;
+}
+
 .sectionHeader {
   font-family: Montserrat;
   font-size: 1.4rem;
@@ -9,11 +15,6 @@
 
 .sectionHeader h3 {
   margin: 0 0 0 1rem;
-}
-
-.container {
-  position: relative;
-  padding: 1rem;
 }
 
 .container a {
@@ -32,8 +33,3 @@
   width: calc(100% - 1.5rem);
   align-self: flex-end;
 }
-/* 
-.customIcon {
-  color: black !important;
-  background-color: black !important;
-} */
