--- a/src/components/Resume/Skill.module.css
+++ b/src/components/Resume/Skill.module.css
@@ -1,20 +1,23 @@
 .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-top: 0.25rem;
   width: 100%;
-  /* border: 1px solid green; */
+  height: 1.5rem;
+  border: 1px solid green;
 }
 
 .skillTitle {
   font-family: "Open Sans";
   font-weight: 600;
-  width: 15%;
+  width: 18%;
+  margin: 0;
 }
 
 .progressContainer {
-  width: 85%;
-  /* border: 1px solid red; */
+  width: 82%;
+  border: 1px solid red;
   display: flex;
   align-items: center;
   position: relative;
@@ -24,11 +27,27 @@
   position: absolute;
   width: 100%;
   height: 0.25rem;
-  background-color: rgba(33, 150, 243, 1);
+  background-color: #90caf9;
+  opacity: 0.5;
 }
 
 .progressOverlay {
   position: absolute;
-  height: 0.5rem;
-  background-color: rgba(33, 150, 243, 0.5);
+  height: 0.25rem;
+  background-color: #90caf9;
+  box-shadow: 0 0 7px #fff;
+}
+
+.grow {
+  animation: grow 1s forwards;
+  cursor: pointer;
+}
+
+@keyframes grow {
+  0% {
+    height: 1.5rem;
+  }
+  100% {
+    height: 2.5rem;
+  }
 }
