--- a/src/components/Resume/MainResume.module.css
+++ b/src/components/Resume/MainResume.module.css
@@ -1,7 +1,9 @@
 .container {
   position: relative;
-  padding: 1rem;
+  padding: 2rem;
   background-color: #121212;
+  /* IS THIS NECESSARY? */
+  /* overflow-x: hidden;  */
 }
 
 .sectionHeader {
