--- a/src/components/Resume/Skill.module.css
+++ b/src/components/Resume/Skill.module.css
@@ -30,6 +30,7 @@
   width: 100%;
   height: 2px;
   background-color: #90caf9;
+  background-color: rgba(255, 255, 255, 0.37);
   opacity: 0.5;
   border-radius: 5px;
 }
@@ -38,21 +39,17 @@
   position: absolute;
   height: 4px;
   background-color: #90caf9;
-  /* box-shadow: 0 0 7px #fff; */
   border-radius: 5px;
   transform: scaleY(1);
-  transition: transform 0.4s ease-in-out;
+  transition: transform 0.25s linear;
 }
 .overlayDark {
-  /* background-color: #90caf9; */
   box-shadow: 0 0 7px #fff;
 }
 .overlayLight {
-  /* box-shadow: 0 0 4px #90caf9; */
   box-shadow: 0 0 3px #5d99c6;
 }
 
-/* .progressContainer:hover .progressOverlay { */
 .container:hover .progressOverlay {
   transform: scaleY(1.4);
 }
