--- a/src/components/Resume/ProjectLinks.module.css
+++ b/src/components/Resume/ProjectLinks.module.css
@@ -61,10 +61,11 @@
 .link {
   font-size: 14px;
   width: 4.5rem;
-  height: 1.4rem;
+  height: 1.5rem;
   text-align: center;
   font-weight: 400 !important;
   color: #90caf9 !important;
+  padding: 2px;
   position: relative;
   border: none;
   z-index: 2;
@@ -77,7 +78,6 @@
   width: 20%;
   height: 20%;
   border: 1px solid #90caf9;
-
   z-index: -1;
   transition: all 0.3s ease;
 }
