Change background of each resume section while not hovered

--- a/src/components/Resume/MainResume.module.css
+++ b/src/components/Resume/MainResume.module.css
@@ -39,5 +39,9 @@
   width: 100%;
   z-index: 2;
   /* border: 1px solid orange; */
-  /* background-color: rgba(0, 0, 0, 0.5); */
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.hidden {
+  display: none;
 }
