--- a/src/components/Resume/Sections/About.module.css
+++ b/src/components/Resume/Sections/About.module.css
@@ -21,7 +21,8 @@
   width: calc(100% + 2rem);
   height: 100%;
   left: -1rem;
-  background: rgba(0, 0, 0, 0.3);
+  background-color: black;
+  opacity: 0.3;
 }
 
 .hidden {
