--- a/src/components/UI/Navbar/MenuDial.module.css
+++ b/src/components/UI/Navbar/MenuDial.module.css
@@ -85,6 +85,9 @@
   .speedDial {
     margin: 0.5rem 0 0 0;
   }
+  .actionFab {
+    background-color: rgba(255, 255, 255, 1) !important;
+  }
 }
 
 @media screen and (max-width: 820px) and (max-height: 450px) {
