Add background styling for light mode (Resume)

--- a/src/components/Resume/MainResume.module.css
+++ b/src/components/Resume/MainResume.module.css
@@ -1,7 +1,14 @@
 .container {
   position: relative;
   padding: 2rem;
+}
+
+.darkBg {
   background-color: #121212;
+}
+
+.lightBg {
+  background-color: white;
 }
 
 .container a {
