--- a/src/components/Resume/Sections/Coursework.module.css
+++ b/src/components/Resume/Sections/Coursework.module.css
@@ -1,3 +1,7 @@
+.courseworkContainer {
+  padding-top: 1rem;
+}
+
 .sectionHeader {
   font-family: Montserrat;
   font-size: 1.4rem;
@@ -21,6 +25,7 @@
   width: calc(100% + 2rem);
   height: 100%;
   left: -1rem;
+  top: 0;
   background-color: black;
   opacity: 0.3;
 }
@@ -29,6 +34,7 @@
   width: calc(100% + 2rem);
   height: 100%;
   left: -1rem;
+  top: 0;
   background-color: black;
   opacity: 0.1;
 }
