--- a/src/components/Resume/ResumeContainer.module.css
+++ b/src/components/Resume/ResumeContainer.module.css
@@ -20,7 +20,7 @@
 }
 
 .paperRoot {
-  padding: 1rem 1rem 0 1rem;
+  padding: 1rem 1rem 1rem 1rem;
   display: flex;
   flex-direction: column;
   position: relative; /* Allows theme switch to be positioned in upper-right corner */
