--- a/src/components/Resume/SectionDivider.module.css
+++ b/src/components/Resume/SectionDivider.module.css
@@ -6,7 +6,8 @@
 }
 
 .dividerLight {
-  background-color: #222222;
+  background-color: #0069c0 !important;
+  box-shadow: 0 0 2px 0.25px #2196f3 !important;
 }
 
 .dividerDark {
