--- a/src/components/Resume/Sections/ExtraContent/ExtraContentContainer.module.css
+++ b/src/components/Resume/Sections/ExtraContent/ExtraContentContainer.module.css
@@ -8,8 +8,13 @@
   padding: 0 1rem;
 }
 
-.root svg {
+.rootDark svg {
   color: white;
+  margin-left: 1rem;
+}
+
+.rootLight svg {
+  color: #222;
   margin-left: 1rem;
 }
 
@@ -18,11 +23,13 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  /* border: 1px solid green; */
 }
 
 .summaryText {
   font-family: Open Sans;
   margin: 0;
+  text-align: center;
   width: 5rem;
 }
 
