--- a/src/components/Resume/Skill.module.css
+++ b/src/components/Resume/Skill.module.css
@@ -27,25 +27,30 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #90caf9;
-  background-color: rgba(255, 255, 255, 0.37);
   opacity: 0.5;
   border-radius: 5px;
+}
+.bgDark {
+  background-color: rgba(255, 255, 255, 0.37);
+}
+.bgLight {
+  background-color: rgba(0, 0, 0, 0.37);
 }
 
 .progressOverlay {
   position: absolute;
   height: 4px;
-  background-color: #90caf9;
   border-radius: 5px;
   transform: scaleY(1);
-  transition: transform 0.25s linear;
+  transition: all 0.25s linear;
 }
 .overlayDark {
+  background-color: #90caf9;
   box-shadow: 0 0 7px #6ec6ff;
 }
 .overlayLight {
-  box-shadow: 0 0 3px #5d99c6;
+  box-shadow: 0 0 3px #0069c0;
+  background-color: #2196f3;
 }
 
 .container:hover .progressOverlay {
