--- a/src/components/UI/ProjectCards/LinkModal.module.css
+++ b/src/components/UI/ProjectCards/LinkModal.module.css
@@ -61,9 +61,9 @@
 }
 
 .closeBtn {
+  z-index: 100;
   width: 100%;
   height: 2rem;
-  border: 2px solid red;
   background-color: #fff !important;
   font-family: Open Sans !important;
   font-size: 16px !important;
