--- a/src/components/UI/ProjectCards/ProjectCards.module.css
+++ b/src/components/UI/ProjectCards/ProjectCards.module.css
@@ -15,9 +15,9 @@
   align-items: center;
 }
 
-.hidden {
+/* .hidden {
   display: none;
-}
+} */
 
 @media screen and (max-width: 800px) {
   .scrollbar {
