--- a/src/components/UI/ProjectCards/LinkModal.module.css
+++ b/src/components/UI/ProjectCards/LinkModal.module.css
@@ -2,12 +2,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 5;
 }
 
 .paper {
   box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
     0px 5px 8px 0px rgb(0 0 0 / 14%), 0px 1px 14px 0px rgb(0 0 0 / 12%);
-  border: 1px solid #222;
+  -webkit-box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
+    0px 5px 8px 0px rgb(0 0 0 / 14%), 0px 1px 14px 0px rgb(0 0 0 / 12%);
+  -moz-box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
+    0px 5px 8px 0px rgb(0 0 0 / 14%), 0px 1px 14px 0px rgb(0 0 0 / 12%);
+  /* border: 1px solid #222; */
   background-color: white !important;
   padding: 0;
   width: 80%;
@@ -23,6 +28,7 @@
 .link {
   width: 100%;
   height: 10rem;
+  border: 5px solid green;
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -32,6 +38,13 @@
   font-family: Open Sans;
   font-size: 18px;
   cursor: pointer;
+  /* z-index: 50; */
+}
+
+.link svg {
+  /* width: 100%;
+  height: 100%; */
+  pointer-events: bounding-box;
 }
 
 .githubLink {
