--- a/src/components/UI/Wrapper.module.css
+++ b/src/components/UI/Wrapper.module.css
@@ -1,8 +1,9 @@
-.scrollbar {
+.wrapper {
   position: absolute;
   top: 0;
   left: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
+  z-index: 2;
 }
 
 .navbar {
