--- a/src/components/component-pages/WorkPage.module.css
+++ b/src/components/component-pages/WorkPage.module.css
@@ -1,9 +1,11 @@
 .container {
-  height: 100%;
-  width: 100%;
-  background-color: #2a2a2a;
+  height: 100vh;
+  width: 100vw;
+  background-color: #2a2a2a !important;
   display: flex;
   justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .container h1 {
