--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,10 @@
 
 html,
 body {
-  max-width: 100%;
-  min-width: 300px;
-  overflow-x: hidden;
+  /* height: 100%; */
+  /* max-width: 100%; */
+  /* min-width: 300px; */
+  overflow: hidden;
 }
 
 body {
