--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,17 +1,16 @@
 .container {
   max-width: 100vw;
-  /* overflow-x: hidden; */
   margin: 0;
   z-index: 1;
+  overflow: hidden;
 }
 
 .pageContainer {
   position: absolute;
   top: 0;
-  height: 100vh;
+  /* height: 100vh; */
+  height: 100%;
   width: 100vw;
-}
-
-.hidden {
-  /* display: none; */
+  /* Was Not previously here */
+  overflow: hidden;
 }
