--- a/src/components/Resume/MainResume.module.css
+++ b/src/components/Resume/MainResume.module.css
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   padding: 2rem;
-  /* overflow: scroll !important; */
+  /* border: 2px solid red !important; */
 }
 
 .darkBg {
@@ -45,4 +45,10 @@
 }
 .sectionContainer:hover svg {
   transform: scale(1.15);
+}
+
+@media screen and (max-width: 800px) {
+  .container {
+    padding: 0;
+  }
 }
