--- a/src/components/Resume/ThemeSwitch.module.css
+++ b/src/components/Resume/ThemeSwitch.module.css
@@ -5,7 +5,9 @@
   align-items: center;
   justify-content: center;
   transition: 0.5s;
-  z-index: 10;
+  z-index: 100;
+  position: relative;
+  top: 0.25rem;
 }
 
 .outerContainer.light {
