--- a/src/components/Resume/Skill.module.css
+++ b/src/components/Resume/Skill.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
-  /* justify-content: space-between; */
   align-items: center;
+  flex-wrap: wrap;
   width: 100%;
   height: 24px;
   position: relative;
@@ -10,17 +10,18 @@
 .skillTitle {
   font-family: "Open Sans";
   font-weight: 600;
-  width: 18%;
+  width: 8rem;
   margin: 0;
 }
 
 .progressContainer {
-  width: 82%;
+  width: calc(100% - 10rem);
+  min-width: 9rem;
   height: 12px;
   display: flex;
   align-items: center;
   position: absolute;
-  right: 0;
+  left: 8rem;
 }
 
 .progressBg {
