--- a/src/components/UI/AboutIcons/AboutIcons.module.css
+++ b/src/components/UI/AboutIcons/AboutIcons.module.css
@@ -42,18 +42,17 @@
 }
 
 /* SVG ANIMATIONS */
-.speedIcon path {
-  animation: draw 2s linear 1s forwards;
-}
-.graphIcon path {
-  animation: draw 2s linear 2s forwards;
-}
-.starIcon path {
+.helpIcon path {
   animation: draw 2s linear forwards;
 }
-.heartIcon path {
-  animation: draw 2s linear 3s forwards;
-  /* animation: dash 2s linear 3s forwards; */
+.peopleIcon path {
+  animation: draw 2s linear 0.75s forwards;
+}
+.schoolIcon path {
+  animation: draw 2s linear 1.5s forwards;
+}
+.searchIcon path {
+  animation: draw 2s linear 2.25s forwards;
 }
 @keyframes draw {
   to {
