--- a/src/components/component-pages/WorkPage.module.css
+++ b/src/components/component-pages/WorkPage.module.css
@@ -1,7 +1,7 @@
 .container {
   height: 100vh;
   width: 100vw;
-  background-color: #2a2a2a !important;
+  background-color: #333 !important;
   display: flex;
   justify-content: center;
   align-items: center;
